# api

./: .dockerignore  .env.example  .gitignore  .releaserc.json  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  renovate.json
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  docker_build.yml  ghcr-cleanup.yml  release.yml
src/: lib.rs  main.rs
src/api/middleware/: auth.rs  extractors.rs  mod.rs
src/api/routes/: mod.rs
src/api/routes/achievements/: mod.rs
src/api/routes/articles/: mod.rs
src/api/routes/articles/article/: mod.rs
src/api/routes/auth/: mod.rs
src/api/routes/auth/config/: mod.rs
src/api/routes/auth/linkedroles/: mod.rs
src/api/routes/auth/refresh/: mod.rs
src/api/routes/auth/sessions/: mod.rs
src/api/routes/auth/sessions/session/: mod.rs
src/api/routes/bots/: mod.rs
src/api/routes/bots/bot/: mod.rs
src/api/routes/bots/bot/achievements/: mod.rs
src/api/routes/bots/bot/achievements/reset/: mod.rs
src/api/routes/bots/bot/events/: mod.rs
src/api/routes/bots/bot/events/event/: mod.rs
src/api/routes/bots/bot/reports/: mod.rs
src/api/routes/bots/bot/settings/: mod.rs
src/api/routes/bots/bot/stats/: mod.rs
src/api/routes/bots/bot/suspend/: mod.rs
src/api/routes/bots/bot/team/: mod.rs
src/api/routes/bots/bot/token/: mod.rs
src/api/routes/health/: mod.rs
src/api/routes/integrations/: mod.rs  providers.rs
src/api/routes/invitations/: mod.rs
src/api/routes/invitations/invitation/: mod.rs
src/api/routes/stats/: mod.rs
src/api/routes/users/: mod.rs
src/api/routes/users/user/: mod.rs
src/api/routes/users/user/bots/: mod.rs
src/api/routes/users/user/invitations/: mod.rs
src/api/routes/users/user/suspend/: mod.rs
src/api/routes/webhooks/: mod.rs  providers.rs
src/api/routes/websocket/: mod.rs
src/config/: env.rs
src/domain/: error.rs
src/domain/auth/: mod.rs  token.rs  types.rs  utils.rs
src/domain/models/: achievement.rs  blog_article.rs  bot.rs  bot_stats.rs  custom_event.rs  global_stats.rs  mod.rs  session.rs  stats_report.rs  team_invitation.rs  user.rs  vote.rs  webhook.rs
src/managers/: chat.rs  mod.rs  webhook.rs
src/openapi/: mod.rs
src/openapi/schemas/: achievement.rs  article.rs  auth.rs  bot.rs  bot_stat.rs  custom_event.rs  health.rs  integrations.rs  invitation.rs  mod.rs  session.rs  stat.rs  stat_report.rs  team.rs  user.rs  vote.rs  webhook.rs
src/repository/: achievements.rs  blog_articles.rs  bot_stats.rs  bots.rs  common.rs  connection.rs  custom_events.rs  global_stats.rs  mod.rs  r2.rs  sessions.rs  stats_reports.rs  team_invitations.rs  users.rs  votes.rs
src/services/: auth.rs  bots.rs  discord.rs  invitations.rs  mail.rs  mod.rs  users.rs  webhooks.rs
src/tasks/: invitations.rs  mod.rs  reports.rs  sessions.rs  warnings.rs
src/utils/: constants.rs  discord.rs  macros.rs  mod.rs  model.rs
src/utils/discord/: mod.rs  notifications.rs  types.rs
src/utils/logger/: codes.rs  error.rs  mod.rs
src/utils/mail/: client.rs  compiler.rs  mod.rs  types.rs
src/utils/mail/templates/: bot_configuration_deletion.mjml  bot_configuration_warning.mjml  bot_deleted_by_admin.mjml  bot_inactive_deletion.mjml  bot_inactive_warning.mjml  bot_suspended.mjml  bot_token_regen.mjml  mod.rs  stats_reports.mjml  team_invite.mjml  test_webhook.mjml  user_deleted_by_admin.mjml  user_suspended.mjml
src/utils/reports/: chart.rs  mod.rs  utils.rs
tests/config/: env.rs
