[package]
name = "discord-analytics-api"
version = "3.0.0"
authors = ["ValDesign"]
edition = "2024"
description = "Official DiscordAnalytics API"
readme = "README.md"
homepage = "https://discordanalytics.xyz"
repository = "https://github.com/DiscordAnalytics/api"

[lib]
name = "api"
path = "src/lib.rs"

[dependencies]
actix-cors = { version = "0.7.1", default-features = false }
actix-web = { version = "4.12.1", default-features = false, features = [
  "macros",
] }
anyhow = { version = "1.0.101", default-features = false, features = ["std"] }
chrono = { version = "0.4.43", default-features = false, features = [
  "clock",
  "serde",
] }
dotenvy = { version = "0.15.7", default-features = false }
futures = { version = "0.3.32", default-features = false, features = ["alloc"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["rust_crypto"] }
mongodb = { version = "3.5.1", default-features = false, features = [
  "bson-3",
  "compat-3-3-0",
  "dns-resolver",
  "rustls-tls",
] }
regex = { version = "1.12.3", default-features = false, features = ["std"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "http2", "rustls"] }
ring = { version = "0.17.14", default-features = false, features = ["alloc"] }
s3 = { version = "0.1.15", default-features = false, features = [
  "async",
  "rustls",
  "providers",
] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.149", default-features = false }
tokio = { version = "1.49.0", default-features = false, features = [
  "rt-multi-thread",
  "macros",
] }
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.22", default-features = false, features = [
  "ansi",
  "fmt",
  "std",
] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
