[package]
name = "discord-analytics-api"
version = "3.0.0"
authors = ["ValDesign"]
edition = "2024"
description = "Official DiscordAnalytics API"
readme = "README.md"
homepage = "https://discordanalytics.xyz"
repository = "https://github.com/DiscordAnalytics/api"

[features]
default = ["full"]
mails = ["dep:lettre", "dep:mrml"]
otel = [
  "dep:opentelemetry-appender-tracing",
  "dep:opentelemetry-otlp",
  "dep:opentelemetry_sdk",
]
reports = ["dep:s3", "mails"]
full = ["mails", "otel", "reports"]

[lib]
name = "api"
path = "src/lib.rs"

[[bin]]
name = "discord-analytics-api"
path = "src/main.rs"

[dependencies]
actix-cors = { version = "0.7.1", default-features = false }
actix-web = { version = "4.13.0", default-features = false }
actix-ws = { version = "0.4.0", default-features = false }
anyhow = { version = "1.0.102", default-features = false }
apistos = { version = "0.6.0", default-features = false }
chrono = { version = "0.4.44", default-features = false, features = [
  "now",
  "serde",
] }
dotenvy = { version = "0.15.7", default-features = false }
futures = { version = "0.3.32", default-features = false }
hex = { version = "0.4.3", default-features = false }
jsonwebtoken = { version = "10.3.0", default-features = false, features = [
  "aws_lc_rs",
  "hmac",
  "sha2",
] }
lettre = { version = "0.11.19", optional = true, default-features = false, features = [
  "builder",
  "hostname",
  "smtp-transport",
  "tokio1-native-tls",
  "pool",
] }
mongodb = { version = "3.5.2", default-features = false, features = [
  "bson-3",
  "compat-3-3-0",
  "dns-resolver",
  "rustls-tls",
] }
mrml = { version = "5.1.0", optional = true, default-features = false, features = [
  "parse",
  "render",
] }
opentelemetry-appender-tracing = { version = "0.31.1", optional = true, default-features = false }
opentelemetry-otlp = { version = "0.31.0", optional = true, default-features = false, features = [
  "http-proto",
  "logs",
  "reqwest-blocking-client",
  "reqwest-rustls",
] }
opentelemetry_sdk = { version = "0.31.0", optional = true, default-features = false }
regex = { version = "1.12.3", default-features = false, features = ["std"] }
reqwest = { version = "0.13.2", default-features = false, features = [
  "form",
  "http2",
  "json",
  "rustls",
] }
ring = { version = "0.17.14", default-features = false }
s3 = { version = "0.1.22", optional = true, features = ["providers"] }
schemars = { package = "apistos-schemars", version = "0.8.22", default-features = false }
serde = { version = "1.0.228", default-features = false }
serde_json = { version = "1.0.149", default-features = false }
tokio = "1.50.0"
tracing = { version = "0.1.44", default-features = false }
tracing-actix-web = { version = "0.7.21", default-features = false, features = [
  "emit_event_on_error",
] }
tracing-subscriber = { version = "0.3.23", default-features = false, features = [
  "ansi",
  "env-filter",
  "fmt",
] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
strip = true
panic = "abort"

[profile.release.package."*"]
opt-level = "z"
